--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "browserify": "^8.0.3",
+    "jest-cli": "^0.6.1",
     "jshint": "^2.5.5",
     "less": "^2.2.0",
     "reactify": "^0.17.1",
@@ -38,7 +39,6 @@
   },
   "scripts": {
     "test": "standard && tap test/*.js",
-    "start": "node bin/cli",
     "start": "node bin/cli",
     "build-js": "browserify -e --standalone widget-awesome ./lib/browser.js | uglifyjs - > static/bundle.js",
     "build-css": "lessc src/style/widget.less > static/bundle.css",
