--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "version-route": "~1.0.0"
   },
   "devDependencies": {
+    "babel-jest": "^5.3.0",
     "browserify": "^8.0.3",
     "jest-cli": "^0.6.1",
     "jshint": "^2.5.5",
