--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jest-cli": "^0.6.1",
     "jshint": "^2.5.5",
     "less": "^2.2.0",
+    "react-addons-test-utils": "^0.14.0",
     "reactify": "^0.17.1",
     "standard": "^4.5.4",
     "uglify-js": "^2.4.16",
