Configure standard style for jest

--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
       "<rootDir>/node_modules/fbjs"
     ],
     "testDirectoryName": "test"
+  },
+  "standard": {
+    "globals": ["jest", "describe", "it", "expect"]
   }
 }
